--- a/common/config/fontconfig/install
+++ b/common/config/fontconfig/install
@@ -6,4 +6,4 @@ sudo rm -rf ~/.config/fontconfig/fonts.conf > /dev/null 2>&1
 
 mkdir ~/.config/fontconfig > /dev/null 2>&1
 
-ln -sf ${ROOT}/fonts.conf ~/.config/fontconfig/fonts.conf
+ln -sf "${ROOT}"/fonts.conf ~/.config/fontconfig/fonts.conf
