--- a/common/config/feh/install
+++ b/common/config/feh/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-ROOT=$(dirname $0)
+ROOT=$(dirname "$0")
 
 sudo rm -rf ~/.config/feh/.fehbg > /dev/null 2>&1
 sudo rm -rf ~/.config/feh/wallpaper.jpg > /dev/null 2>&1
