--- a/common/config/jgmenu/install
+++ b/common/config/jgmenu/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-ROOT=$(dirname $0)
+ROOT=$(dirname "$0")
 
 sudo rm -rf ~/.config/jgmenu/jgmenurc > /dev/null 2>&1
 sudo rm -rf ~/.config/jgmenu/append.csv > /dev/null 2>&1
