--- a/common/config/termite/install
+++ b/common/config/termite/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-ROOT=$(dirname $0)
+ROOT=$(dirname "$0")
 
 sudo rm -rf ~/.config/termite/config > /dev/null 2>&1
 mkdir ~/.config/termite > /dev/null 2>&1
