--- a/common/config/zsh/install
+++ b/common/config/zsh/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-ROOT=$(dirname $0)
+ROOT=$(dirname "$0")
 
 sudo rm -rf ~/.zshrc > /dev/null 2>&1
 sudo rm -rf ~/.zsh_prompt > /dev/null 2>&1
