--- a/install
+++ b/install
@@ -21,19 +21,21 @@
 ##         --dotfiles-dir=OUTPUT_PATH        Dotfiles output dir, is ~/dotfiles by default.
 ##
 
-ROOT=$(dirname $0)
+ROOT=$(dirname "$0")
 
 source "${ROOT}"/util/opts/opts.sh || exit
 
 # override OS with a correct value with the given params
 source "${ROOT}"/util/os.sh || exit
 
+echo "Installing dotfiles for OS: ${os}"
+
 # load deps for give os. Defines pkgs variable
-source "${ROOT}"/${os}/deps.sh || exit
+source "${ROOT}"/"${os}"/deps.sh || exit
 
-args=$@
-args=( "${args[@]/--utils/}" )
-args=( "${args[@]/--nodunst/}" )
-args=( "${args[@]/--bluetooth/}" )
+args="$*"
+args=( "${args/--utils/}" )
+args=( "${args/--nodunst/}" )
+args=( "${args/--bluetooth/}" )
 
-"${ROOT}"/scripts/install ${args[@]} --pkgs=${pkgs}
+"${ROOT}"/scripts/install ${args[*]} --pkgs="${pkgs}"
