--- a/default-config/wm/openbox/install
+++ b/default-config/wm/openbox/install
@@ -3,4 +3,4 @@
 ROOT=$(dirname "$0")
 
 sudo rm -rf ~/.config/openbox > /dev/null 2>&1
-ln -sf ${ROOT} ~/.config/openbox
+ln -sf "${ROOT}" ~/.config/openbox
