--- a/default-config/wm/xfce4/install
+++ b/default-config/wm/xfce4/install
@@ -3,4 +3,4 @@
 ROOT=$(dirname "$0")
 
 sudo rm -rf ~/.config/xfce4 > /dev/null 2>&1
-ln -sf ${ROOT} ~/.config/xfce4
+ln -sf "${ROOT}" ~/.config/xfce4
