--- a/common/config/feh/install
+++ b/common/config/feh/install
@@ -7,4 +7,7 @@ sudo rm -rf ~/.config/feh/.fehbg > /dev/null 2>&1
 mkdir ~/.config/feh > /dev/null 2>&1
 
 ln -sf "${ROOT}"/fehbg ~/.config/feh/.fehbg
-[ ! -f ~/.config/feh/wallpaper.jpg ] && ln -sf "${ROOT}"/wallpaper.jpg ~/.config/feh/wallpaper.jpg
+
+if [ ! -L ~/.config/feh/wallpaper.jpg ]; then
+  ln -sf "${ROOT}"/wallpaper.jpg ~/.config/feh/wallpaper.jpg
+fi
