--- a/default-config/common/install
+++ b/default-config/common/install
@@ -1,14 +1,14 @@
 #!/usr/bin/env bash
 
 create_symlink() {
-    to=${2:-"$HOME/.$1"}
+  to=${2:-"$HOME/.$1"}
 
-    if [ -e $dotfiles_dir/custom-config/$1 ]; then
-        ln -sf $dotfiles_dir/custom-config/$1 $to
-    else
-        cp -rf "${ROOT}"/$1 $dotfiles_dir/custom-config/$1
-        ln -sf $dotfiles_dir/custom-config/$1 $to
-    fi
+  if [ -e "${dotfiles_dir}"/custom-config/"$1" ]; then
+    ln -sf "${dotfiles_dir}"/custom-config/"$1" "${to}"
+  else
+    cp -rf "${ROOT}"/"$1" "${dotfiles_dir}"/custom-config/"$1"
+    ln -sf "${dotfiles_dir}"/custom-config/"$1" "${to}"
+  fi
 }
 
 ROOT=$(dirname "$0")
@@ -17,26 +17,25 @@ dotfiles_dir="${ROOT}/.."
 #==========================================
 # Delete existing dot files and folders
 #==========================================
-sudo rm -rf ~/.gitconfig > /dev/null 2>&1
-sudo rm -rf ~/.xprofile > /dev/null 2>&1
-sudo rm -rf ~/.Xresources > /dev/null 2>&1
-sudo rm -rf ~/.Xresources.d > /dev/null 2>&1
-sudo rm -rf ~/.config/i3 > /dev/null 2>&1
-sudo rm -rf ~/.config/polybar/modules/custom.conf > /dev/null 2>&1
-sudo rm -rf ~/.config/polybar/polybars/custom.conf > /dev/null 2>&1
+sudo rm -rf ~/.gitconfig >/dev/null 2>&1
+sudo rm -rf ~/.xprofile >/dev/null 2>&1
+sudo rm -rf ~/.Xresources >/dev/null 2>&1
+sudo rm -rf ~/.Xresources.d >/dev/null 2>&1
+sudo rm -rf ~/.config/polybar/modules/custom.conf >/dev/null 2>&1
+sudo rm -rf ~/.config/polybar/polybars/custom.conf >/dev/null 2>&1
 
 #==========================================
 # Create symlinks in the home folder
 # Allow overriding with files of matching names in the custom-config dir
 #==========================================
-touch ~/.gitconfig > /dev/null 2>&1
-touch ~/.xprofile > /dev/null 2>&1
-touch ~/.Xresources > /dev/null 2>&1
-touch ~/.config/polybar/modules/custom.conf > /dev/null 2>&1
-touch ~/.config/polybar/modules/polybar.conf > /dev/null 2>&1
+touch ~/.gitconfig >/dev/null 2>&1
+touch ~/.xprofile >/dev/null 2>&1
+touch ~/.Xresources >/dev/null 2>&1
+touch ~/.config/polybar/modules/custom.conf >/dev/null 2>&1
+touch ~/.config/polybar/modules/polybar.conf >/dev/null 2>&1
 
-[ ! -d $dotfiles_dir/custom-config/polybar/modules ] && mkdir -p $dotfiles_dir/custom-config/polybar/modules
-[ ! -d $dotfiles_dir/custom-config/polybar/polybars ] && mkdir -p $dotfiles_dir/custom-config/polybar/polybars
+[ ! -d "${dotfiles_dir}"/custom-config/polybar/modules ] && mkdir -p "${dotfiles_dir}"/custom-config/polybar/modules
+[ ! -d "${dotfiles_dir}"/custom-config/polybar/polybars ] && mkdir -p "${dotfiles_dir}"/custom-config/polybar/polybars
 
 create_symlink gitconfig
 create_symlink xprofile
@@ -49,9 +48,12 @@ sudo chmod +x ~/.xprofile
 
 printf "Setting up wm...\\n"
 
-for script in $dotfiles_dir/custom-config/**/install; do
-    [ -e "${script}" ] || break
-    ${script}
+for script in "${dotfiles_dir}"/custom-config/**/install; do
+  [ -e "${script}" ] || break
+  [ -x "${script}" ] || {
+    chmod +x "${script}"
+  }
+  ${script}
 done
 
 printf "Setting up git...\\n"
