Updated rofi setup

--- a/default-config/common/rofi/install
+++ b/default-config/common/rofi/install
@@ -6,7 +6,13 @@ printf "Setting up rofi themes...\\n"
 
 rm -rf "${ROOT}"/rofi-themes
 git clone https://github.com/ulises-jeremias/rofi-themes.git "${ROOT}"/rofi-themes
+
 sudo rm -rf ~/.config/rofi/themes >/dev/null 2>&1
 sudo rm -rf ~/.config/rofi/config.rasi >/dev/null 2>&1
+
 mkdir -p ~/.config/rofi
+
 ln -sf "${ROOT}"/rofi-themes/themes ~/.config/rofi/themes
+ln -sf "${ROOT}"/apps.rasi ~/.config/rofi/apps.rasi
+ln -sf "${ROOT}"/networks.rasi ~/.config/rofi/networks.rasi
+ln -sf "${ROOT}"/tools.rasi ~/.config/rofi/tools.rasi
