--- a/common/config/dunst/install
+++ b/common/config/dunst/install
@@ -2,8 +2,8 @@
 
 ROOT=$(dirname "$0")
 
-sudo rm -rf ~/.config/dunst/dunstrc > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME}"/dunst/dunstrc > /dev/null 2>&1
 
-mkdir ~/.config/dunst > /dev/null 2>&1
+mkdir "${XDG_CONFIG_HOME}"/dunst > /dev/null 2>&1
 
-ln -sf "${ROOT}"/dunstrc ~/.config/dunst/dunstrc
+ln -sf "${ROOT}"/dunstrc "${XDG_CONFIG_HOME}"/dunst/dunstrc
