--- a/common/config/fontconfig/install
+++ b/common/config/fontconfig/install
@@ -2,8 +2,8 @@
 
 ROOT=$(dirname "$0")
 
-sudo rm -rf ~/.config/fontconfig/fonts.conf > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME}"/fontconfig/fonts.conf > /dev/null 2>&1
 
-mkdir ~/.config/fontconfig > /dev/null 2>&1
+mkdir "${XDG_CONFIG_HOME}"/fontconfig > /dev/null 2>&1
 
-ln -sf "${ROOT}"/fonts.conf ~/.config/fontconfig/fonts.conf
+ln -sf "${ROOT}"/fonts.conf "${XDG_CONFIG_HOME}"/fontconfig/fonts.conf
