--- a/install
+++ b/install
@@ -8,3 +8,4 @@ cp -Rf * "${PKGDIR}/opt/${PKGNAME}"
 install -Dm644 LICENSE -t "${PKGDIR}/usr/share/licenses/${PKGNAME}/"
 install -Dm644 README.md -t "${PKGDIR}/usr/share/doc/${PKGNAME}/"
 install -Dm755 dots -t "${PKGDIR}/usr/bin/"
+install -Dm755 dots-scripts -t "${PKGDIR}/usr/bin/"
