--- a/common/config/polybar/install
+++ b/common/config/polybar/install
@@ -2,18 +2,18 @@
 
 ROOT=$(dirname "$0")
 
-sudo rm -rf "${XDG_CONFIG_HOME}"/polybar/modules > /dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME}"/polybar/polybars > /dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME}"/polybar/config > /dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME}"/polybar/launch > /dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME}"/polybar/master.conf > /dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME}"/polybar/modules.conf > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/modules > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/polybars > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/config > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/launch > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/master.conf > /dev/null 2>&1
+sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/modules.conf > /dev/null 2>&1
 
-mkdir "${XDG_CONFIG_HOME}"/polybar > /dev/null 2>&1
+mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar > /dev/null 2>&1
 
-ln -sf "${ROOT}"/modules "${XDG_CONFIG_HOME}"/polybar/modules
-ln -sf "${ROOT}"/polybars "${XDG_CONFIG_HOME}"/polybar/polybars
-ln -sf "${ROOT}"/config "${XDG_CONFIG_HOME}"/polybar/config
-ln -sf "${ROOT}"/launch "${XDG_CONFIG_HOME}"/polybar/launch
-ln -sf "${ROOT}"/master.conf "${XDG_CONFIG_HOME}"/polybar/master.conf
-ln -sf "${ROOT}"/modules.conf "${XDG_CONFIG_HOME}"/polybar/modules.conf
+ln -sf "${ROOT}"/modules "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/modules
+ln -sf "${ROOT}"/polybars "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/polybars
+ln -sf "${ROOT}"/config "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/config
+ln -sf "${ROOT}"/launch "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/launch
+ln -sf "${ROOT}"/master.conf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/master.conf
+ln -sf "${ROOT}"/modules.conf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/modules.conf
