--- a/install
+++ b/install
@@ -4,7 +4,7 @@ ROOT=$(dirname "$0")
 PKGNAME=${PKGNAME:-"dots-git"}
 
 install -d "${PKGDIR}/opt/${PKGNAME}"
-cp -Rf * "${PKGDIR}/opt/${PKGNAME}"
+cp -Rf ./* "${PKGDIR}/opt/${PKGNAME}"
 install -Dm644 LICENSE -t "${PKGDIR}/usr/share/licenses/${PKGNAME}/"
 install -Dm644 README.md -t "${PKGDIR}/usr/share/doc/${PKGNAME}/"
 install -Dm755 dots -t "${PKGDIR}/usr/bin/"
