--- a/install
+++ b/install
@@ -5,7 +5,7 @@ PKGNAME=${PKGNAME:-"dots"}
 
 install -d "${PKGDIR}/opt/${PKGNAME}"
 cp -Rf "${ROOT}"/* "${PKGDIR}/opt/${PKGNAME}"
-install -Dm644 -t -C LICENSE "${PKGDIR}/usr/share/licenses/${PKGNAME}/"
-install -Dm644 -t -C README.md "${PKGDIR}/usr/share/doc/${PKGNAME}/"
-install -Dm755 -t -C dots "${PKGDIR}/usr/bin/"
-install -Dm755 -t -C dots-scripts "${PKGDIR}/usr/bin/"
+install -Dm644 -t LICENSE "${PKGDIR}/usr/share/licenses/${PKGNAME}/"
+install -Dm644 -t README.md "${PKGDIR}/usr/share/doc/${PKGNAME}/"
+install -Dm755 -t dots "${PKGDIR}/usr/bin/"
+install -Dm755 -t dots-scripts "${PKGDIR}/usr/bin/"
