--- a/default-config/common/install
+++ b/default-config/common/install
@@ -18,12 +18,12 @@ dotfiles_dir="${ROOT}/.."
 #==========================================
 # Delete existing dot files and folders
 #==========================================
-sudo rm -rf ~/.gitconfig >/dev/null 2>&1
-sudo rm -rf ~/.xprofile >/dev/null 2>&1
-sudo rm -rf ~/.Xresources >/dev/null 2>&1
-sudo rm -rf ~/.Xresources.d >/dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/modules/custom.conf >/dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/polybars/custom.conf >/dev/null 2>&1
+rm -rf ~/.gitconfig >/dev/null 2>&1
+rm -rf ~/.xprofile >/dev/null 2>&1
+rm -rf ~/.Xresources >/dev/null 2>&1
+rm -rf ~/.Xresources.d >/dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/modules/custom.conf >/dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/polybar/polybars/custom.conf >/dev/null 2>&1
 
 #==========================================
 # Create symlinks in the home folder
