--- a/common/config/dunst/install
+++ b/common/config/dunst/install
@@ -2,7 +2,7 @@
 
 ROOT=$(dirname "$0")
 
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/dunst/dunstrc > /dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/dunst/dunstrc > /dev/null 2>&1
 
 mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/dunst > /dev/null 2>&1
 
