--- a/common/config/fontconfig/install
+++ b/common/config/fontconfig/install
@@ -2,7 +2,7 @@
 
 ROOT=$(dirname "$0")
 
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/fontconfig/fonts.conf > /dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/fontconfig/fonts.conf > /dev/null 2>&1
 
 mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/fontconfig > /dev/null 2>&1
 
