--- a/common/config/networkmanager-dmenu/install
+++ b/common/config/networkmanager-dmenu/install
@@ -2,7 +2,7 @@
 
 ROOT=$(dirname "$0")
 
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/networkmanager-dmenu/config.ini > /dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/networkmanager-dmenu/config.ini > /dev/null 2>&1
 
 mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/networkmanager-dmenu > /dev/null 2>&1
 
