--- a/default-config/common/rofi/install
+++ b/default-config/common/rofi/install
@@ -7,8 +7,8 @@ printf "Setting up rofi themes...\\n"
 rm -rf "${ROOT}"/rofi-themes
 git clone https://github.com/ulises-jeremias/rofi-themes.git "${ROOT}"/rofi-themes
 
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/rofi/themes >/dev/null 2>&1
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/rofi/config.rasi >/dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/rofi/themes >/dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/rofi/config.rasi >/dev/null 2>&1
 
 mkdir -p "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/rofi
 
