--- a/default-config/wm/openbox/install
+++ b/default-config/wm/openbox/install
@@ -2,5 +2,5 @@
 
 ROOT=$(dirname "$0")
 
-sudo rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/openbox >/dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/openbox >/dev/null 2>&1
 ln -sf "${ROOT}" "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/openbox
