Updated installation scripts

--- a/common/config/dunst/install
+++ b/common/config/dunst/install
@@ -2,8 +2,9 @@
 
 ROOT=$(dirname "$0")
 
-rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/dunst/dunstrc > /dev/null 2>&1
+SOURCE_DIR=$(realpath "${ROOT}")
+XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-"${HOME}"/.config}"
 
-mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/dunst > /dev/null 2>&1
-
-ln -sf "${ROOT}"/dunstrc "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/dunst/dunstrc
+rm -rf "${XDG_CONFIG_HOME}"/dunst/dunstrc > /dev/null 2>&1
+mkdir "${XDG_CONFIG_HOME}"/dunst > /dev/null 2>&1
+ln -sf "${SOURCE_DIR}"/dunstrc "${XDG_CONFIG_HOME}"/dunst/dunstrc
