--- a/common/config/alacritty/install
+++ b/common/config/alacritty/install
@@ -2,6 +2,9 @@
 
 ROOT=$(dirname "$0")
 
-rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/alacritty/alacritty.yml > /dev/null 2>&1
-mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/alacritty > /dev/null 2>&1
-ln -sf "${ROOT}"/alacritty.yml "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/alacritty/alacritty.yml
+SOURCE_DIR=$(realpath "${ROOT}")
+XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-"${HOME}"/.config}"
+
+rm -rf "${XDG_CONFIG_HOME}"/alacritty/alacritty.yml > /dev/null 2>&1
+mkdir "${XDG_CONFIG_HOME}"/alacritty > /dev/null 2>&1
+ln -sf "${SOURCE_DIR}"/alacritty.yml "${XDG_CONFIG_HOME}"/alacritty/alacritty.yml
