--- a/common/config/jgmenu/install
+++ b/common/config/jgmenu/install
@@ -2,12 +2,15 @@
 
 ROOT=$(dirname "$0")
 
-rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/jgmenu/jgmenurc > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/jgmenu/append.csv > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/jgmenu/prepend.csv > /dev/null 2>&1
+SOURCE_DIR=$(realpath "${ROOT}")
+XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-"${HOME}"/.config}"
 
-mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/jgmenu > /dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME}"/jgmenu/jgmenurc > /dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME}"/jgmenu/append.csv > /dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME}"/jgmenu/prepend.csv > /dev/null 2>&1
 
-ln -sf "${ROOT}"/jgmenurc "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/jgmenu/jgmenurc
-ln -sf "${ROOT}"/append.csv "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/jgmenu/append.csv
-ln -sf "${ROOT}"/prepend.csv "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/jgmenu/prepend.csv
+mkdir "${XDG_CONFIG_HOME}"/jgmenu > /dev/null 2>&1
+
+ln -sf "${SOURCE_DIR}"/jgmenurc "${XDG_CONFIG_HOME}"/jgmenu/jgmenurc
+ln -sf "${SOURCE_DIR}"/append.csv "${XDG_CONFIG_HOME}"/jgmenu/append.csv
+ln -sf "${SOURCE_DIR}"/prepend.csv "${XDG_CONFIG_HOME}"/jgmenu/prepend.csv
