--- a/common/config/networkmanager-dmenu/install
+++ b/common/config/networkmanager-dmenu/install
@@ -2,8 +2,9 @@
 
 ROOT=$(dirname "$0")
 
-rm -rf "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/networkmanager-dmenu/config.ini > /dev/null 2>&1
+SOURCE_DIR=$(realpath "${ROOT}")
+XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-"${HOME}"/.config}"
 
-mkdir "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/networkmanager-dmenu > /dev/null 2>&1
-
-ln -sf "${ROOT}"/config.ini "${XDG_CONFIG_HOME:-"${HOME}"/.config}"/networkmanager-dmenu/config.ini
+rm -rf "${XDG_CONFIG_HOME}"/networkmanager-dmenu/config.ini > /dev/null 2>&1
+mkdir "${XDG_CONFIG_HOME}"/networkmanager-dmenu > /dev/null 2>&1
+ln -sf "${SOURCE_DIR}"/config.ini "${XDG_CONFIG_HOME}"/networkmanager-dmenu/config.ini
