--- a/common/config/zsh/install
+++ b/common/config/zsh/install
@@ -2,10 +2,12 @@
 
 ROOT=$(dirname "$0")
 
+SOURCE_DIR=$(realpath "${ROOT}")
+
 rm -rf ~/.zshrc > /dev/null 2>&1
 rm -rf ~/.zsh_prompt > /dev/null 2>&1
 rm -rf ~/.zsh_aliases > /dev/null 2>&1
 
-ln -sf "${ROOT}"/zshrc ~/.zshrc
-ln -sf "${ROOT}"/zsh_prompt ~/.zsh_prompt
-ln -sf "${ROOT}"/zsh_aliases ~/.zsh_aliases
+ln -sf "${SOURCE_DIR}"/zshrc ~/.zshrc
+ln -sf "${SOURCE_DIR}"/zsh_prompt ~/.zsh_prompt
+ln -sf "${SOURCE_DIR}"/zsh_aliases ~/.zsh_aliases
