Updated install scripts

--- a/scripts/install
+++ b/scripts/install
@@ -20,13 +20,15 @@
 ##         --pkgs=COMMA_SEPARATED_DEPS       Dependencies to install.
 ##
 
+set -e
+
 ROOT=$(dirname "$0")
 
-source "${ROOT}"/../util/easy-options/easyoptions.sh || exit
-source "${ROOT}"/../util/logs.sh || exit
+source "${ROOT}"/../util/easy-options/easyoptions.sh
+source "${ROOT}"/../util/logs.sh
 
 # override OS with a correct value with the given params
-source "${ROOT}"/../util/os.sh || exit
+source "${ROOT}"/../util/os.sh
 
 #==========================================
 # Default argument values and preprocessing
