--- a/common/config/alacritty/install
+++ b/common/config/alacritty/install
@@ -1,10 +1,16 @@
 #!/usr/bin/env bash
 
 ROOT=$(dirname "$0")
-
 SOURCE_DIR=$(realpath "${ROOT}")
-XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-"${HOME}"/.config}"
 
-rm -rf "${XDG_CONFIG_HOME}"/alacritty/alacritty.yml > /dev/null 2>&1
-mkdir "${XDG_CONFIG_HOME}"/alacritty > /dev/null 2>&1
-ln -sf "${SOURCE_DIR}"/alacritty.yml "${XDG_CONFIG_HOME}"/alacritty/alacritty.yml
+if [ ! -d "${SOURCE_DIR}"/alacritty-theme/.git ]; then
+  rm -rf "${SOURCE_DIR}"/alacritty-theme
+  git clone https://github.com/eendroroy/alacritty-theme "${SOURCE_DIR}"/alacritty-theme
+fi
+
+cd "${SOURCE_DIR}"/alacritty-theme || exit 1
+git pull
+cd "${SOURCE_DIR}" || exit 1
+
+rm -rf ~/.config/alacritty/themes >/dev/null 2>&1
+ln -sf "${SOURCE_DIR}"/alacritty-theme/themes ~/.config/alacritty/themes
