--- a/common/config/polybar/install
+++ b/common/config/polybar/install
@@ -7,7 +7,7 @@ XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-"${HOME}"/.config}"
 
 rm -rf "${XDG_CONFIG_HOME}"/polybar/modules > /dev/null 2>&1
 rm -rf "${XDG_CONFIG_HOME}"/polybar/polybars > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME}"/polybar/config > /dev/null 2>&1
+rm -rf "${XDG_CONFIG_HOME}"/polybar/config.ini > /dev/null 2>&1
 rm -rf "${XDG_CONFIG_HOME}"/polybar/launch > /dev/null 2>&1
 rm -rf "${XDG_CONFIG_HOME}"/polybar/master.conf > /dev/null 2>&1
 rm -rf "${XDG_CONFIG_HOME}"/polybar/modules.conf > /dev/null 2>&1
@@ -16,7 +16,7 @@ mkdir "${XDG_CONFIG_HOME}"/polybar > /dev/null 2>&1
 
 ln -sf "${SOURCE_DIR}"/modules "${XDG_CONFIG_HOME}"/polybar/modules
 ln -sf "${SOURCE_DIR}"/polybars "${XDG_CONFIG_HOME}"/polybar/polybars
-ln -sf "${SOURCE_DIR}"/config "${XDG_CONFIG_HOME}"/polybar/config
+ln -sf "${SOURCE_DIR}"/config.ini "${XDG_CONFIG_HOME}"/polybar/config.ini
 ln -sf "${SOURCE_DIR}"/launch "${XDG_CONFIG_HOME}"/polybar/launch
 ln -sf "${SOURCE_DIR}"/master.conf "${XDG_CONFIG_HOME}"/polybar/master.conf
 ln -sf "${SOURCE_DIR}"/modules.conf "${XDG_CONFIG_HOME}"/polybar/modules.conf
