--- a/install
+++ b/install
@@ -10,7 +10,15 @@ rm -rf "${PKGDIR}/opt/${PKGNAME}" \
     "${PKGDIR}/usr/share/doc/${PKGNAME}/"
 
 install -d "${PKGDIR}/opt/${PKGNAME}"
-cp -Rf "${ROOT}"/* "${PKGDIR}/opt/${PKGNAME}"
+
+# override OS with a correct value with the given params
+# creates variable `os`
+source "${ROOT}"/util/os.sh
+
+for dirname in common "${os}" default-config scripts ui util dots; do
+    cp -Rf "${ROOT}"/"${dirname}" "${PKGDIR}/opt/${PKGNAME}"
+done
+
 install -Dm644 "${ROOT}"/LICENSE -t "${PKGDIR}/usr/share/licenses/${PKGNAME}/"
 install -Dm644 "${ROOT}"/README.md -t "${PKGDIR}/usr/share/doc/${PKGNAME}/"
 install -Dm755 "${ROOT}"/dots -t "${PKGDIR}/usr/bin/"
