Updated setup and backup script

--- a/scripts/install
+++ b/scripts/install
@@ -16,7 +16,7 @@
 ##                                           where common is supposed to work correctly with any linux distro.
 ##                                           `common` is set as default value for this flag.
 ##         --wms=COMMA_SEPARATED_WMS         Window managers. Posible wms: i3, openbox
-##         --log-file=LOG_FILE_PATH          Logs file path, is /tmp/install_progress_log_$(date +'%m-%d-%y_%H:%M:%S').txt by default.
+##         --log-file=LOG_FILE_PATH          Logs file path, is /tmp/dots_install_log_$(date +'%m-%d-%y_%H:%M:%S').txt by default.
 ##         --dotfiles-dir=OUTPUT_PATH        Dotfiles output dir, is ~/dotfiles by default.
 ##         --pkgs=COMMA_SEPARATED_DEPS       Dependencies to install.
 ##
@@ -36,7 +36,7 @@ source "${ROOT}"/../util/os.sh
 #==========================================
 os=${os:-"common"}
 time_str=$(date +'%m-%d-%y_%H:%M:%S')
-log_file=${log_file:-"/tmp/install_progress_log_$time_str.txt"}
+log_file=${log_file:-"/tmp/dots_install_log_$time_str.txt"}
 dotfiles_dir=${dotfiles_dir:-"$HOME/dotfiles"}
 wms=${wms:-""}
 
