--- a/common/config/zsh/install
+++ b/common/config/zsh/install
@@ -1,8 +1,6 @@
 #!/usr/bin/env bash
 
-ROOT=$(dirname "$0")
-
-SOURCE_DIR=$(realpath "${ROOT}")
+SOURCE_DIR="$(realpath "$(dirname "$0")")"
 
 rm -rf ~/.zshrc > /dev/null 2>&1
 rm -rf ~/.zsh_prompt > /dev/null 2>&1
