--- a/default-config/common/bin/install
+++ b/default-config/common/bin/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-ROOT=$(dirname "$0")
+ROOT="$(realpath "$(dirname "$0")")"
 SCRIPT_NAME=$(basename "$0")
 
 for bin_path in "${ROOT}"/*; do
