--- a/default-config/common/install
+++ b/default-config/common/install
@@ -1,7 +1,6 @@
 #!/usr/bin/env bash
 
-ROOT=$(dirname "$0")
-SOURCE_DIR=$(realpath "${ROOT}")
+SOURCE_DIR="$(realpath "$(dirname "$0")")"
 DOTFILES_DIR=$(realpath "${SOURCE_DIR}/..")
 
 create_symlink() {
